--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,23 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  flutter_native_splash: ^2.4.2
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+
+
+  # color: "#ffffff"
+  background_image: "assets/images/splash.png"
+
+
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
